Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9918

[ERROR] mysqld got signal 11 during ALTER TABLE `name` COLUMN ADD

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.13, 10.0(EOL), 10.1(EOL)
    • 10.0.25, 10.1.14
    • 10.0.25

    Description

      From mariadb log:

      2016-04-14  4:58:03 140116923128496 [ERROR] Table ./csm/history_digital185410 has a primary key in InnoDB data dictionary, but not in MySQL!
      2016-04-14  4:58:03 140116923128496 [ERROR] InnoDB: Table csm/history_digital185410 contains 2 indexes inside InnoDB, which is different from the number of indexes 1 defined in the MySQL 
      2016-04-14  4:58:03 140116923128496 [Note] InnoDB: Online DDL : Start
      2016-04-14  4:58:03 140116923128496 [Note] InnoDB: Online DDL : Start reading clustered index of the table and create temporary files
      160414  4:58:03 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
      

      The database crashed many times during altering tables.
      There is over 400000 small tables in this database, and I wish to alter about 220000 tables.
      RAM memory in system: 4GB.
      Storage used for database: about 31GB

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jsiebert Jarosław Siebert
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.25d
                1.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.