MDEV-9918: [ERROR] mysqld got signal 11 during ALTER TABLE `name` COLUMN ADD

Problem was that in-place online alter table was used on a table
that had mismatch between MySQL frm file and InnoDB data dictionary.
Fixed so that traditional "Copy" method is used if the MySQL frm
and InnoDB data dictionary is not consistent.